[package]
name = "gh-pinned-rs"
description = "Fetch pinned repositories from github."
license = "MIT"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.2"
tl = "0.7.8"
tokio = { version = "1.36.0", features = ["full"] }
