[package]
name = "gh-pinned-rs"
description = "Fetch pinned repositories from github."
license = "MIT"
version = "2.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.2" }
tl = "0.7.8"

[features]
default = ["async"]
async = ["tokio"]
blocking = ["reqwest/blocking"]

[dependencies.tokio]
version = "1.36.0"
optional = true
features = ["full"]
