[package]
name = "gh-pinned-rs"
description = "Fetch pinned repositories from github."
license = "MIT"
version = "2.0.3"
documentation = "https://docs.rs/gh-pinned-rs"
repository = "https://github.com/qxb3/gh-pinned-rs"
homepage = "https://github.com/qxb3/gh-pinned-rs"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.2" }
tl = "0.7.8"

[features]
default = ["async"]
async = ["tokio"]
blocking = ["reqwest/blocking"]

[dependencies.tokio]
version = "1.36.0"
optional = true
features = ["full"]

[package.metadata.docs.rs]
features = ["async", "blocking"]
